package com.car.interfaces;

public interface ITrim extends IVehicle {

}
