package com.car.interfaces;

public interface ITurbo extends IVehicle {

    public void enableTurbo();

    public void disableTurbo();

    public boolean getTurboState();

}
