package com.car.model;

/**
 * Trim is a class that represents the trim factor of a car.
 * 
 * @author Kiril Curlinov, Gabriele Frattini, Sebastian Pålsson
 * @param trimFactor the trim factor of the car
 * 
 */
public class Trim {
    private double factor = 1.25;

    public double getFactor() {
        return factor;
    }
}
